mdapi/Custom/objects/Assignment__c.object
<CustomObject>
    <description>Corporate Projects was built early on as a quick-hit project mgmt tool for a select group of corporate users.  We have since explored more robust products and will likely at a future point time.</description>
    <fields>
        <fullName>Assigned_to_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corp_Project__c</fullName>
        <label>Project</label>
        <referenceTo>Corp_Project__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <label>Status Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IF( TEXT( Status__c ) = &quot;On Hold&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001lnMs&quot;, &quot;Yellow flag&quot;) , 
IF( TEXT( Status__c ) &lt;&gt; &quot;Completed&quot; &amp;&amp;  Deadline__c  &lt; TODAY() , 
IMAGE (&quot;/servlet/servlet.FileDownload?file=015E0000001lnMr&quot; , &quot;Red Flag&quot;) , 
IF(TEXT( Status__c ) = &quot;Completed&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001lnMm&quot;, &quot;Checkered Flag&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001lnMn&quot;, &quot;Green Flag&quot;) ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All_Assignments</fullName>
        <columns>Corp_Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_to_Member__c</columns>
        <columns>Deadline__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Comments__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assignments</label>
    </listViews>
    <listViews>
        <fullName>Assignments_for_My_Projects</fullName>
        <columns>Corp_Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_to_Member__c</columns>
        <columns>Deadline__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Status_Comments__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Mine</filterScope>
        <label>Assignments on My Projects</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Assignments_All</fullName>
        <columns>Corp_Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_to_Member__c</columns>
        <columns>Deadline__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Status_Comments__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Deadline__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>On-Hold,Completed</value>
        </filters>
        <label>Overdue Assignments - All</label>
    </listViews>
    <nameField>
        <label>Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>